@@ -1146,9 +1146,9 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkLabel" id="label12">
+		<widget class="GtkLabel" id="labelDownloads">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Download Status</property>
+		  <property name="label" translatable="yes">Downloads</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
